fargate.tf
# connect to the ecs task using SSM
#
# 1) get the task-id of the currently running containers/tasks
#     (cluster and service names will be in the terrafrom output after applying)
#
#  example: $ aws ecs list-tasks --cluster aws_ztb_demo-cluster --service aws_ztb_demo-service
#     {
#         "taskArns": [
#             "arn:aws:ecs:us-east-1:905418062037:task/aws_ztb_demo-cluster/703ba4a12efb4bada02dae1c41d2a658",
#             "arn:aws:ecs:us-east-1:905418062037:task/aws_ztb_demo-cluster/8a644d0a28674172823ea3cbbd24f94d"
#        ]                                                                  ^______________________________^
#     }                                                       The task-id portion      |
#                                                                                      |      
# 2) get the container name:                                               v------------------------------v
#  example: aws ecs describe-tasks --cluster aws_ztb_demo-cluster --tasks 8a644d0a28674172823ea3cbbd24f94d | jq .tasks[0].containers[0].name
#
# 3) launch the SSM connection
# aws ecs execute-command --cluster aws_ztb_demo-cluster \
#  --task 8a644d0a28674172823ea3cbbd24f94d \
#  --container aws_ztb_demo-container \
#  --interactive \
#  --command "/bin/bash"
#
# If you get this message:
# SessionManagerPlugin is not found. Please refer to SessionManager 
# Documentation here: http://docs.aws.amazon.com/console/systems-manager/session-manager-plugin-not-found
# then run the following command:
# curl "https://s3.amazonaws.com/session-manager-downloads/plugin/latest/ubuntu_64bit/session-manager-plugin.deb" -o "/tmp/session-manager-plugin.deb"
# sudo apt install /tmp/session-manager-plugin.deb
#
# If you get this message launching the SSM connection:
#   The Session Manager plugin was installed successfully. Use the AWS CLI to start a session.
#   An error occurred (InvalidParameterException) when calling the ExecuteCommand operation: 
#   The execute command failed because execute command was not enabled when the task was run 
#   or the execute command agent isn’t running. Wait and try again or run a new task with execute
#   command enabled and try again.
#
#   You can check the state of the execute command on the tasks with the following command:
#        aws ecs describe-services --cluster aws_ztb_demo-cluster --services aws_ztb_demo-service --query 'services[0].enableExecuteCommand'
#
#   Then relaunch the services and try with the new tasks. I'm not sure if this is a bug or not.
# aws ecs update-service --cluster aws_ztb_demo-cluster \
#    --service aws_ztb_demo-service \
#    --force-new-deployment



# CloudWatch Log Group
resource "aws_cloudwatch_log_group" "ecs_log_group" {
  name              = local.ecs_log_group
  retention_in_days = 30
}


# Application Load Balancer
resource "aws_lb" "app_lb" {
  name               = "${replace(lower(var.tags["Project"]), "/[^a-z0-9-]/", "-")}-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]
  subnets            = aws_subnet.public_subnet[*].id

  tags = var.tags
}

resource "aws_lb_listener" "front_end" {
  load_balancer_arn = aws_lb.app_lb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.app.arn
  }
}

resource "aws_lb_target_group" "app" {
  name        = "${replace(lower(var.tags["Project"]), "/[^a-z0-9-]/", "-")}-tg"
  port        = 80
  protocol    = "HTTP"
  vpc_id      = aws_vpc.this_vpc.id
  target_type = "ip"

  health_check {
    healthy_threshold   = "3"
    interval            = "30"
    protocol            = "HTTP"
    matcher             = "200"
    timeout             = "3"
    path                = "/"
    unhealthy_threshold = "2"
  }
}

# ECR Repository
resource "aws_ecr_repository" "my_repo" {
  name                 = var.ecr_repository_name
  image_tag_mutability = "MUTABLE"

  image_scanning_configuration {
    scan_on_push = true
  }
}

# ECS Cluster
resource "aws_ecs_cluster" "main" {
  name = "${var.tags["Project"]}-cluster"
  tags = var.tags
}

# ECS Task Definition
resource "aws_ecs_task_definition" "app" {
  family                   = "${var.tags["Project"]}-task"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = "256"
  memory                   = "512"
  execution_role_arn       = aws_iam_role.ecs_execution_role.arn
  task_role_arn            = aws_iam_role.ecs_task_role.arn

  container_definitions = jsonencode([{
    name  = "${var.tags["Project"]}-container"
    image = local.container_image_arn

    portMappings = [{
      containerPort = 80
      hostPort      = 80
    }]

    secrets = [{
      name      = "DB_SECRET"
      valueFrom = data.aws_secretsmanager_secret.postgres_credentials.arn
    }]

    logConfiguration = {
      logDriver = "awslogs"
      options = {
        awslogs-group         = local.ecs_log_group
        awslogs-region        = var.aws_region
        awslogs-stream-prefix = "ecs"
      }
    }
  }])

  tags = var.tags
}

# ECS Service
resource "aws_ecs_service" "main" {
  name            = "${var.tags["Project"]}-service"
  cluster         = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.app.arn
  desired_count   = 2
  launch_type     = "FARGATE"

  network_configuration {
    security_groups  = [aws_security_group.ecs_tasks.id]
    subnets          = aws_subnet.private_subnet[*].id
    assign_public_ip = false
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.app.arn
    container_name   = "${var.tags["Project"]}-container"
    container_port   = 80
  }

  # allow execute command in ECS 
  enable_execute_command = true  # Add this line

  depends_on = [aws_lb_listener.front_end]

  tags = var.tags
}

# Auto Scaling
# how many tasks to run min-max
resource "aws_appautoscaling_target" "ecs_target" {
  max_capacity       = 4
  min_capacity       = 2
  resource_id        = "service/${aws_ecs_cluster.main.name}/${aws_ecs_service.main.name}"
  scalable_dimension = "ecs:service:DesiredCount"
  service_namespace  = "ecs"
}

# scaling policy - when to scale
resource "aws_appautoscaling_policy" "ecs_policy" {
  name               = "${var.tags["Project"]}-scaling-policy"
  policy_type        = "TargetTrackingScaling"
  resource_id        = aws_appautoscaling_target.ecs_target.resource_id
  scalable_dimension = aws_appautoscaling_target.ecs_target.scalable_dimension
  service_namespace  = aws_appautoscaling_target.ecs_target.service_namespace

  target_tracking_scaling_policy_configuration {
    predefined_metric_specification {
      predefined_metric_type = "ECSServiceAverageCPUUtilization"
    }
    target_value = 70.0
  }
}

# IAM Roles
resource "aws_iam_role" "ecs_execution_role" {
  name = "${var.tags["Project"]}-ecs-execution-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Action = "sts:AssumeRole"
      Effect = "Allow"
      Principal = {
        Service = "ecs-tasks.amazonaws.com"
      }
    }]
  })

  tags = var.tags
}

# task execution role - setup container environment, etc
resource "aws_iam_role_policy_attachment" "ecs_execution_role_policy" {
  role       = aws_iam_role.ecs_execution_role.name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
}

# task role - app inside container (access postgres or SM. etc)
resource "aws_iam_role" "ecs_task_role" {
  name = "${var.tags["Project"]}-ecs-task-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Action = "sts:AssumeRole"
      Effect = "Allow"
      Principal = {
        Service = "ecs-tasks.amazonaws.com"
      }
    }]
  })

  tags = var.tags
}

# Allow ECS tasks to access Secrets Manager and RDS
resource "aws_iam_role_policy" "ecs_task_secrets_rds" {
  name = "${var.tags["Project"]}-ecs-task-secrets-rds-policy"
  role = aws_iam_role.ecs_task_role.id

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Effect = "Allow"
        Action = [
          "secretsmanager:GetSecretValue"
        ]
        Resource = [data.aws_secretsmanager_secret.postgres_credentials.arn]
      },
      {
        Effect = "Allow"
        Action = [
          "rds-db:connect"
        ]
        Resource = [aws_db_instance.postgres_db.arn]
      }
    ]
  })
}

# Add a policy to the ECS execution role to access Secrets Manager for the postgres credentials
# this way, the creds could be exported to the container environment as env variables and SM access could be removed
resource "aws_iam_role_policy" "ecs_execution_perms" {
  name = "${var.tags["Project"]}-ecs-execution-secrets-policy"
  role = aws_iam_role.ecs_execution_role.id

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Effect = "Allow"
        Action = [
          "secretsmanager:GetSecretValue"
        ]
        Resource = [data.aws_secretsmanager_secret.postgres_credentials.arn]
      },
      {
        Effect = "Allow"
        Action = [
          "ecr:GetDownloadUrlForLayer",
          "ecr:BatchGetImage",
          "ecr:BatchCheckLayerAvailability",
          "ecr:GetAuthorizationToken",
          "ecr:GetRepositoryPolicy",
          "ecr:BatchGetImageManifest"          
        ]
        Resource = "*"
      },
      {
        Effect = "Allow"
        Action = [
          "logs:CreateLogGroup",
          "logs:CreateLogStream",
          "logs:PutLogEvents",
          "logs:DescribeLogStreams",
          "logs:DescribeLogGroups"
        ]
        Resource = "arn:aws:logs:*:*:*"
      }
    ]
  })
}

# allow use of SSM by the ECS tasks - this allows SSM via aws cli so you can get a shell
resource "aws_iam_role_policy" "ecs_task_ssm" {
  name = "${var.tags["Project"]}-ecs-task-ssm-policy"
  role = aws_iam_role.ecs_task_role.id
  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Effect = "Allow"
        Action = [
          "ssmmessages:CreateControlChannel",
          "ssmmessages:CreateDataChannel",
          "ssmmessages:OpenControlChannel",
          "ssmmessages:OpenDataChannel"
        ]
        Resource = "*"
      }
    ]
  })
}

# Security Groups - allow access from the ALB
resource "aws_security_group" "alb_sg" {
  name        = "${var.tags["Project"]}-alb-sg"
  description = "Controls access to the ALB"
  vpc_id      = aws_vpc.this_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = var.tags
}

# Security Group for ECS tasks to alow access from the ALB
resource "aws_security_group" "ecs_tasks" {
  name        = "${var.tags["Project"]}-ecs-tasks-sg"
  description = "Allow inbound access from the ALB only"
  vpc_id      = aws_vpc.this_vpc.id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = var.tags
}

# Update the existing RDS security group to allow access from ECS tasks
resource "aws_security_group_rule" "rds_from_ecs" {
  type                     = "ingress"
  from_port                = 5432
  to_port                  = 5432
  protocol                 = "tcp"
  source_security_group_id = aws_security_group.ecs_tasks.id
  security_group_id        = aws_security_group.postgres_sg.id
}

# this doesnt work in a container
resource "null_resource" "build_and_push_docker_image" {
  # docker build -t my-app .
  provisioner "local-exec" {
    command = <<EOT
      make dpush
    EOT
  }

  depends_on = [aws_ecr_repository.my_repo]
}

output "alb_dns_name" {
  value = aws_lb.app_lb.dns_name
}

output "ecs_cluster_name" {
  value = aws_ecs_cluster.main.name
}

output "ecs_service_name" {
  value = aws_ecs_service.main.name
}

output "ecr_repository_url" {
  value = aws_ecr_repository.my_repo.repository_url
}

output "target_group_arn" {
  value = aws_lb_target_group.app.arn
}
